# CalcX

./: .gitignore  CMakeLists.txt  CalcX.pro  CalcX.qrc  README.md
debian/usr/share/applications/: CalcX.desktop
src/: calculator.cpp  calculator.h  main.cpp  themeeditor.cpp  themeeditor.h  themesettings.cpp  themesettings.h
